<resources>
    <string name="app_name">Depth of Field Calculator</string>
    <string name="action_settings">Credits</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">DoF Calculator</string>
    <string name="focal_length">Focal length</string>
    <string name="aperature">Aperature</string>
    <string name="save">Save</string>
    <string name="lens_details">Lens Details</string>
    <string name="_0_029">0.029</string>
    <string name="calculate">Calculate</string>
    <string name="circle_of_confusion_m">Circle of Confusion [m]</string>
    <string name="photo_details_with">Photo details with :</string>
    <string name="calc">calc</string>
    <string name="selected_aperature">Selected Aperature</string>
    <string name="distance_to_subject_m">Distance to Subject [m]</string>
    <string name="calculate_dof">Calculate DoF</string>
    <string name="select_the_lens_to_use">Select the Lens to use</string>
    <string name="dof_calculator">DoF Calculator</string>
    <string name="go_back">GO BACK</string>
    <string name="make_Here">MAKE Here</string>
    <string name="focal_len_here">Focal len Here</string>
    <string name="aperature_here">Aperature here</string>
    <string name="lens">Lens</string>
    <string name="ex_200_for_200mm">ex: 200 for 200mm</string>
    <string name="ex_canon">ex: Canon</string>
    <string name="ex_2_8_for_f2_8">ex: 2.8 for F2.8</string>
    <string name="enter_all_values">Enter All Values</string>
    <string name="hyperfocal_distance">Hyperfocal Distance</string>
    <string name="depth_of_field">Depth of Field</string>
    <string name="far_focal_distance">Far Focal Distance</string>
    <string name="near_focal_distance">Near Focal Distance</string>
    <string name="lens_3">lens 3</string>
    <string name="lens_2">lens 2</string>
    <string name="lens_4">lens 4</string>
    <string name="lens_1">lens 1</string>
    <string name="lens_5">lens 5</string>
    <string name="icons">Icons</string>
    <string name="icon_here">icon here</string>
    <string name="disclaimer">This is a Depth of field calculator of camera lens, designed by Vaibhav Saini (Vaibhavs) and Hiten Thapar (hthapar) as part of our CMPT276 Assignment. We would like to acknowlegde that we don\'t own any of the Image Icons used in the the assignemnt and that they were mere a google search result. The original credits and copyrights to the Images belong to their respected publisher. We also would like to thank you for using our app.</string>
    <string name="add_lens_here"> </string>
    <string name="opt_ft">Optional features:\n1. App Bar Buttons\n2. Edit and Delete Lens\n3. Error Checking Input\n6. Lens Icon\n7. Empty State</string>
    <string name="confirm_remove"> Delete </string>
    <string name="select_lens_to_remove">Select Lens to Delete</string>
    <string name="aperture">Aperture</string>
    <string name="textview">TextView</string>
    <string name="lens_focal_length">Lens Focal Length</string>
    <string name="lens_make">Lens Make</string>
    <string name="make">Make</string>
    <string name="invalid_CoC">Invalid Circle of Confusion</string>
    <string name="invalid_distance">Invalid Distance to Subject</string>
    <string name="invalid_ap">Invalid Aperture</string>
    <string name="add_lens_main">Add a New Lens to begin by clicking on the \'+\' button</string>
    <string name="lens_aperture">Lens Aperture</string>
</resources>