<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:maxWidth="80dp"
        android:maxHeight="80dp"
        app:srcCompat="@drawable/lens"
        android:contentDescription="@string/lens" />

    <TextView
        android:id="@+id/text_make"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@+id/img_icon"
        android:text="@string/make_Here"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_focallen"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="107dp"
        android:layout_marginTop="46dp"
        android:text="@string/focal_len_here"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_aperature"
        android:layout_width="136dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="16dp"
        android:text="@string/aperature_here"
        android:textSize="18sp" />

</RelativeLayout>
