<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.DOFCalculator">

    <TextView
        android:id="@+id/text_HFDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="120dp"
        android:text="@string/enter_all_values"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="24dp"
        android:text="@string/hyperfocal_distance"
        app:layout_constraintEnd_toStartOf="@+id/text_HFDistance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="24dp"
        android:text="@string/depth_of_field"
        app:layout_constraintEnd_toStartOf="@+id/text_DoF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/text_DoF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="120dp"
        android:text="@string/enter_all_values"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:text="@string/far_focal_distance"
        app:layout_constraintEnd_toStartOf="@+id/text_FFDistance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/text_FFDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="120dp"
        android:text="@string/enter_all_values"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <EditText
        android:id="@+id/input_Aperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_Calc"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="149dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="256dp"
        android:text="@string/selected_aperature"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/input_Aperature"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_Distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/input_Aperature"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="149dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="36dp"
        android:text="@string/distance_to_subject_m"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/input_Distance"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="207dp"
        android:layout_height="30dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="100dp"
        android:text="@string/calculate_dof"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lens_info"
        android:layout_width="367dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/photo_details_with"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/input_CoC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="149dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="36dp"
        android:text="@string/circle_of_confusion_m"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/input_CoC"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_CoC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:singleLine="true"
        android:text="@string/_0_029"
        app:layout_constraintBottom_toTopOf="@+id/input_Distance"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_Calc"
        android:layout_width="118dp"
        android:layout_height="46dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="183dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/cancel_btn"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        android:text="@string/near_focal_distance"
        app:layout_constraintEnd_toStartOf="@+id/text_NFDistance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/text_NFDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="120dp"
        android:text="@string/enter_all_values"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>